Bug #5485
Missing const qualifiers for strings in libndmp
Start date:
2014-12-26
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Missing const qualifiers for strings in libndmp make using the library more complicated than it needs to be. One has to either overtype const strings to non-const strings or copy const strings to non-const buffers before calling some of the functions.
Updated by Jan Kryl about 6 years ago
- Status changed from New to In Progress
- % Done changed from 0 to 100
Updated by Electric Monk about 6 years ago
- Status changed from Pending RTI to Closed
git commit 8b87c15576a5138f88a969448b43561bf5968c09
commit 8b87c15576a5138f88a969448b43561bf5968c09 Author: Jan Kryl <jan.kryl@nexenta.com> Date: 2014-12-27T14:32:28.000Z 5485 Missing const qualifiers for strings in libndmp 5486 leaked buffer in ndmp_base64_decode() Reviewed by: Marcel Telka <marcel.telka@nexenta.com> Reviewed by: Dan Fields <dan.fields@nexenta.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>