5485 Missing const qualifiers for strings in libndmp 5486 leaked buffer in ndmp_base64_decode() Reviewed by: Marcel Telka <marcel.telka@nexenta.com> Reviewed by: Dan Fields <dan.fields@nexenta.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>